# Intro-to-Modern-OpenGL

./: CMakeLists.txt
include/: Camera.h  Display.h  Mesh.h  Shader.h  Texture.h  Transform.h  stb_image.h
res/: basic_shader.fs.glsl  basic_shader.vs.glsl
src/: Display.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  main.cpp  obj_loader.cpp  stb_image.c
